updates email templates

--- a/src/views/templates/login.html
+++ b/src/views/templates/login.html
@@ -3,7 +3,7 @@
 <main style="padding: 0px 20px; margin-top: 40px;">
     <h1 style="font-size: 24px;">Hello, you just signed in.</h1>
 
-    <p style="font-size: 17px; margin-top: 12px;">Good to see have again at Kluxpay, happy Trading</p>
+    <p style="font-size: 17px; margin-top: 12px;">Good to have you again at Kluxpay, Happy Trading.</p>
 </main>
 
 <div>
@@ -14,7 +14,7 @@
 </div>
 
 <div style="padding: 0px 20px; margin-top: 32px;">
-    <p style="font-size: 17px">If this wasn’t you, please reset your password immediately.</p>
+    <p style="font-size: 17px">If this wasn’t you, please reset your password or contact support immediately.</p>
 </div>
 
 {{> footer}}
