--- a/src/views/templates/reset-password.html
+++ b/src/views/templates/reset-password.html
@@ -4,15 +4,14 @@
         {{title}}
     </h2>
 
-    <p style="margin-top: 0.5rem;">
-        Hello {{name}}! We’re letting you know that your password was successfully reset. If you made this change,
-        you don’t need to do anything else.
+    <p style="margin-top: 0.5rem; font-size: 17px;">
+        We’re letting you know that your password reset request was successful.
     </p>
 
     <p style="margin-top: 2rem;">
-        <strong>Didn’t reset your password?</strong> No problem - contact support or lock your account.
+        <strong>Didn’t reset your password?</strong> No problem - contact support for more information on how to lock
+        your account.
     </p>
 
-    <p style="margin-top: 2rem;">Stay safe {{name}}!</p>
 </section>
 {{> footer}}
