changed main element to div

--- a/src/views/templates/login.html
+++ b/src/views/templates/login.html
@@ -1,10 +1,10 @@
 {{> header}}
 
-<main style="padding: 0px 20px; margin-top: 40px;">
+<div style="padding: 0px 20px; margin-top: 40px;">
     <h1 style="font-size: 24px;">Hello, you just signed in.</h1>
 
     <p style="font-size: 17px; margin-top: 12px;">Good to have you again at Kluxpay, Happy Trading.</p>
-</main>
+</div>
 
 <div>
     <h1 style="font-size: 17px; margin-top: 40px; padding: 0px 20px;">Device data</h1>
