--- a/src/views/templates/login.html
+++ b/src/views/templates/login.html
@@ -1,20 +1,21 @@
 {{> header}}
 
 <div style="padding: 0px 20px; margin-top: 40px;">
-    <h1 style="font-size: 24px;">Hello, you just signed in.</h1>
+    <h1 style="font-size: 24px;">You just signed in.</h1>
 
-    <p style="font-size: 17px; margin-top: 12px;">Good to have you again at Kluxpay, Happy Trading.</p>
+    <p style="font-size: 16px; margin-top: 12px;">We're happy to see you again! Your login was successful, and you’re
+        all set to continue where you left off.</p>
 </div>
 
-<div>
+<!-- <div>
     <h1 style="font-size: 17px; margin-top: 40px; padding: 0px 20px;">Device data</h1>
     <div style="width: 100%; padding: 12px 20px; background-color: #eee; margin-top: 8px;">
         <p style="font-size: 14px;">{device}</p>
     </div>
-</div>
+</div> -->
 
 <div style="padding: 0px 20px; margin-top: 32px;">
-    <p style="font-size: 17px">If this wasn’t you, please reset your password or contact support immediately.</p>
+    <p style="font-size: 14px">If this wasn’t you, please reset your password or contact support immediately.</p>
 </div>
 
 {{> footer}}
