--- a/src/views/templates/trade-cancelled.html
+++ b/src/views/templates/trade-cancelled.html
@@ -9,11 +9,10 @@
     </p>
 
     <p style="margin-top: 40px;">
-        Your {{badge}} has canceled this trade. We've released {{amount}} {{coinSymbol}} from escrow back into your
-        wallet.
+        Your trade has been cancelled. {{caption}}
     </p>
 
-    <a href="{{url}}"
+    <a href="https://kluxpay.com/app/trades/{{tradeId}}"
         class="btn"
         style="margin-top: 32px; display: block;">
         Open Trade
