--- a/src/views/templates/trade-completed.html
+++ b/src/views/templates/trade-completed.html
@@ -9,12 +9,12 @@
     </p>
 
     <p style="margin-top: 40px;">
-        Congratulations {{amount}} {{coinSymbol}} has {{caption}}.
+        Congratulations {{amount}} has {{caption}}.
     </p>
 
 
 
-    <a href="{{url}}"
+    <a href="https://kluxpay.com/app/trades/{{tradeId}}"
         class="btn"
         style="margin-top: 32px; display: block;">
         Open Trade
