--- a/src/views/templates/trade-request.html
+++ b/src/views/templates/trade-request.html
@@ -16,7 +16,7 @@
         The cryptocurrency is already in escrow (the amount shown below includes fees).
     </p>
 
-    <a href="{{url}}"
+    <a href="https://kluxpay.com/app/trades/{{tradeId}}"
         class="btn"
         style="margin-top: 32px; display: block;">
         Open Trade
